# probosqis

./: .gitignore  .gitmodules  Cargo.toml  build.gradle  gradle.properties  settings.gradle
androidApp/: build.gradle
androidApp/src/main/: AndroidManifest.xml
app/: build.gradle  proguard-rules.pro
app/android/: build.gradle
app/desktop/: build.gradle
app/js/: build.gradle
desktopApp/: build.gradle
gradle/: android.gradle  androidConfig.gradle  androidDependencies.gradle  androidModule.gradle  compose.gradle  composeDependencies.gradle  defactoStandardDependencies.gradle  kotlin.gradle  kotlinConfig.gradle  kotlinDependencies.gradle  setupModule.gradle
gradle/wrapper/: gradle-wrapper.properties
jsApp/: build.gradle
modules/app/: Cargo.toml  build.gradle
modules/app/core/: Cargo.toml  build.gradle
modules/app/pagedeck/: build.gradle
modules/app/setting/: build.gradle
modules/cache/compose/: build.gradle
modules/cache/core/: build.gradle
modules/credential/: build.gradle
modules/entity/: Cargo.toml  build.gradle
modules/error/: build.gradle
modules/ext/android/: build.gradle
modules/ext/androidMain/: build.gradle
modules/ext/compose/: build.gradle
modules/ext/kotlin/: build.gradle
modules/ext/kotlinTest/: Cargo.toml  build.gradle
modules/ext/panoptiqon/: Cargo.toml  build.gradle
modules/ext/platform/: build.gradle
modules/ext/reqwest/: Cargo.toml
modules/foundation/entity/: Cargo.toml  build.gradle
modules/foundation/error/: build.gradle
modules/foundation/page/: build.gradle
modules/foundation/resources/: build.gradle
modules/mastodon/: Cargo.toml
modules/mastodon/entity/: Cargo.toml  build.gradle
modules/mastodon/repository/: Cargo.toml  build.gradle
modules/mastodon/ui/: build.gradle
modules/mastodon/webapi/: .gitignore  Cargo.toml
modules/nodeinfo/entity/: Cargo.toml  build.gradle
modules/page/: build.gradle
modules/pagedeck/: build.gradle
modules/perpetuation/: build.gradle
modules/resources/: build.gradle
modules/testpages/: build.gradle
(+560 files in other folders)
