# Copyright 2024 wcaokaze
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[workspace]
members = [
    "modules/app",
    "modules/ext/kotlinTest",
    "modules/ext/panoptiqon",
    "modules/ext/reqwest",
    "modules/mastodon/entity",
    "modules/mastodon/repository",
    "modules/mastodon/webapi",
    "modules/nodeinfo/entity",
    "modules/nodeinfo/repository",
    "modules/nodeinfo/webapi",
    "modules/panoptiqon/panoptiqon",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.86"
chrono = { version = "0.4.38", features = ["serde"] }
isolang = { version = "2.4.0", features = ["serde"] }
serde = { version = "1.0.215", features = ["derive"] }

jni = "0.21.1"

paste = "1.0.15"

url = { version = "2.5.2", features = ["serde"] }
semver = "1.0.23"
reqwest.version = "0.12.7"
reqwest.default-features = false
reqwest.features = ["rustls-tls", "charset", "http2", "blocking", "json"]

ext-kotlintest = { path = "modules/ext/kotlinTest" }
ext_panoptiqon = { path = "modules/ext/panoptiqon" }
ext_reqwest = { path = "modules/ext/reqwest" }
panoptiqon = { path = "modules/panoptiqon/panoptiqon" }
mastodon_entity = { path = "modules/mastodon/entity" }
mastodon_repository = { path = "modules/mastodon/repository" }
mastodon_webapi = { path = "modules/mastodon/webapi" }
nodeinfo_entity = { path = "modules/nodeinfo/entity" }
nodeinfo_repository = { path = "modules/nodeinfo/repository" }
nodeinfo_webapi = { path = "modules/nodeinfo/webapi" }
